Fix newsletter button on mobile

--- a/packages/numenta.com/pages/newsletter/index.css
+++ b/packages/numenta.com/pages/newsletter/index.css
@@ -4,21 +4,8 @@
  * Copyright © 2005—2017 Numenta <http://numenta.com>
  */
 
-.signup {
-  composes: br2 from 'tachyons';
-  composes: cf from 'tachyons';
-  composes: mb3 from 'tachyons';
-  composes: mb0-ns from 'tachyons';
-  composes: pb0 from 'tachyons';
-  composes: pl3 from 'tachyons';
-  composes: pt3 from 'tachyons';
-  composes: pr0 from 'tachyons';
-  composes: relative from 'tachyons';
-  composes: top--1 from 'tachyons';
-}
-
-.formrow {
-  margin-right: 0;
+.button {
+  composes: flex-none from 'tachyons';
 }
 
 .newsletter {
@@ -28,6 +15,7 @@
 .filter {
   composes: f5 lh-solid from 'tachyons';
 }
+
 @media screen and (min-width: 768px) {
   .signup {
     float: right;
@@ -40,6 +28,7 @@
   composes: b--black-20 from 'tachyons';
   composes: br2 from 'tachyons';
   composes: h2 from 'tachyons';
+  composes: f5 from 'tachyons';
   background-color: inherit;
   float: right;
   text-align: right;
